Updating #member-list table header, making all member data searchable

--- a/lib/html/member-directory.html
+++ b/lib/html/member-directory.html
@@ -2,10 +2,14 @@
   <colgroup><col style="width: auto;"><col style="width: 64%;"><col style="width: 18%;"><col style="width: 18%;"></colgroup>
   <thead>
     <tr>
-      <th>&nbsp;</th>
-      <th>Company</th>
-      <th>Contact First</th>
-      <th>Contact Last</th>
+      <th rowspan="2">&nbsp;</th>
+      <th rowspan="2">Company</th>
+      <th colspan="2">Contact</th>
+      <th>Address</th>
+    </tr>
+    <tr>
+      <th>First</th>
+      <th>Last</th>
     </tr>
   </thead>
 </table>
